[tool.poetry]
name = "df_raw_decoder"
version = "1.0.0"
description = "Encoding and decoding of compressed raw files of Dwarf Fortress"
authors = ["insolor <insolor@gmail.com>", "kateBy"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
