[tool.poetry]
name = "df_raw_decoder"
version = "1.1.0"
description = "Encoding and decoding of compressed raw files of Dwarf Fortress"
authors = ["insolor <insolor@gmail.com>", "kateBy"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
hypothesis = "^6.47.4"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
